fixed deprecated url in OrderService